--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "next": "12.2.5",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
     "react-redux": "^8.0.4",
     "react-select": "^5.4.0",
     "styled-components": "^5.3.5",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "throttle-typescript": "^1.1.0",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "18.7.4",
