--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.36.1",
     "react-redux": "^8.0.4",
     "react-select": "^5.4.0",
