--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.5",
     "next": "12.2.5",
     "next-redux-wrapper": "^8.0.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
@@ -23,8 +24,7 @@
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "swiper": "^8.4.3",
-    "throttle-typescript": "^1.1.0",
-    "use-dark-mode": "^2.3.1"
+    "throttle-typescript": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "18.7.4",
